# complex-processes-2025-rishay-tom

./: .git-reword-message.sh  .git-reword-sequence.sh  .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  generaldb.json  minecraft-dashboard.cabal  package.yaml  package.yaml.old  shell.nix  spec.txt  stack.yaml  stack.yaml.old
.history/: .gitignore_20250917125034  minecraft-dashboard_20250910123812.cabal  minecraft-dashboard_20250910123905.cabal  minecraft-dashboard_20250910124916.cabal  minecraft-dashboard_20250917121752.cabal  package_20250910122953.yaml  shell_20250910122826.nix  shell_20250910125628.nix  spec_20250917121520.txt  spec_20250917121521.txt  stack_20250910122953.yaml  stack_20250910124904.yaml
.history/src/: Main_20250903130403.hs  Main_20250910123225.hs  Main_20250910123234.hs  Main_20250910123250.hs  Main_20250910123330.hs  Main_20250910123407.hs  Main_20250910124010.hs  Main_20250910130135.hs  Main_20250910130255.hs  Main_20250910130330.hs  Main_20250917120915.hs  Main_20250917120930.hs  Main_20250917120959.hs  Main_20250917121046.hs  Main_20250917121133.hs  Main_20250917121137.hs  Main_20250917121211.hs  Main_20250917121248.hs  Main_20250917121542.hs  Main_20250917121613.hs  Main_20250917121616.hs  Main_20250917121650.hs  (+54 more)
app/: Main  Main.hi
public/: filebrowser.html  filebrowser.js  index copy.html  index.html  index.js  intergrations.css  intergrations.html  intergrations.js  main.css  main.html  main.js  nodes.html  servers.html  svelte-main.html  test.html  users.css  users.html  users.js
src/: Lib.hs  Main.hs
(+9 files in other folders)
