cabal-version: 3.0

name: minecraft-dashboard
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: RishRishTheFish
maintainer: rishay.dutt@student.onslow.school.nz
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable minecraft-dashboard
    import: warnings
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    
    build-depends:
        base >=4.7 && <5,
        aeson,
        bytestring,
        text,
        directory,
        filepath,
        scotty,
        http-types,
        transformers,
        websockets,
        wai-websockets,
        wai,
        warp,
        stm,
        process